# jpg_comparer

./: .gitignore  CMakeLists.txt  README
src/: main.c
